# framework

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists2.txt  CMakePresets.json  CmakeLists.txt  Framework.sln  Framework.vcxproj  Framework.vcxproj.filters  LICENSE  README.md  azure-pipelines.yml  done.txt
.claude/: settings.local.json
.github/workflows/: build.yml  cmake-multi-platform.yml
Extensions/: ArrayView.h  Concurrent.h  Constraints.h  Extensions.h  Finally.h  GetterSetter.h  ResourceWrapper.h  WaitForMultipleConditions.h
Interface/: ICRTP.h  ICloneable.h  IGetterSetter.h  IResourceWrapper.h
Properties/: GeneralProperties.props
Sync/: AtomicConditionVariable.h  WaitForMultipleConditions.h
Templates/: Concurrent.h  Extensions.h
Testing/: FrameworkTesting.vcxproj  FrameworkTesting.vcxproj.filters  TestConcurrent.cpp  TestExtensions.cpp  TestInterfaces.cpp  TestThread.cpp  source.cpp  stdafx.cpp  stdafx.h  test_async.cpp  test_async_thread_pool.cpp  test_atomic_concurrent.cpp  test_cloneable.cpp  test_concurrent.cpp  test_constraints.cpp  test_event.cpp  test_exception.cpp  test_extensions.cpp  test_finally.cpp  test_heterogeneous_container.cpp  test_lazy.cpp  test_parameter_pack.cpp  test_property.cpp  test_resource_wrapper.cpp  test_signal.cpp  test_sync_thread_pool.cpp  test_thread.cpp  test_trace.cpp  test_wait_for_multiple_signals.cpp
Thread/: IThreadPool.h  ThreadPool.cpp  ThreadPool.h  ThreadPoolDynamic.cpp  ThreadPoolDynamic.h  WaitForMultipleConditions.h  Worker.cpp  Worker.h  WorkerDynamic.cpp  WorkerDynamic.h  sync_thread_pool.cpp  sync_thread_pool.h  thread_pool.h
cmake/: formatShowDiff.cmake  frameworkConfig.cmake.in
compatibility/: compiler_support.h
exception/: exception.h
extensions/: ICRTP.h  atomic_concurrent.h  cloneable.h  concurrent.h  constraints.h  extensions.h  finally.h  getter_setter.h  lazy.h  not_null_ptr.h  property.h  resource_wrapper.h
include/compatibility/: compiler_support.h
include/exception/: exception.h
include/extensions/: cloneable.h  constraints.h  finally.h  lazy.h  not_null_ptr.h  property.h
include/storage/: heterogeneous_container.h  parameter_pack.h  resource_wrapper.h
include/synchronization/: atomic_concurrent.h  concurrent.h  lock_owner.h  signal.h  wait_for_multiple_signals.h
include/thread/: sync_thread_pool.h
include/tracing/: trace.h
include/utility/: conversions.h
storage/: heterogeneous_container.h  parameter_pack.h  resource_wrapper.h
synchronization/: AtomicConditionVariable.h  WaitForMultipleConditions.h  atomic_concurrent.h  atomic_condition_variable.h  concurrent.h  event.h  lock_owner.h  signal.h  wait_for_multiple_conditions.h  wait_for_multiple_events.h  wait_for_multiple_signals.h
tests/: CMakeLists.txt  FrameworkTesting.vcxproj  FrameworkTesting.vcxproj.filters  stdafx.cpp  test_async.cpp  test_atomic_concurrent.cpp  test_cloneable.cpp  test_concurrent.cpp  test_constraints.cpp  test_exception.cpp  test_extensions.cpp  test_finally.cpp  test_heterogeneous_container.cpp  test_lazy.cpp  test_lock_owner.cpp  test_not_null_ptr.cpp  test_parameter_pack.cpp  test_property.cpp  test_resource_wrapper.cpp  test_signal.cpp  test_sync_thread_pool.cpp  test_trace.cpp  test_wait_for_multiple_signals.cpp
thread/: async.h  async_thread_pool.cpp  async_thread_pool.h  sync_thread_pool.cpp  sync_thread_pool.h
tracing/: trace.h
utility/: conversions.cpp  conversions.h
